force-app/main/default/objects/PaymentCondition__c/PaymentCondition__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena toda as condições de pagamentos, na fase 01 esse objeto será alimentado através de cargas provenientes do SAP.</description>
    
    <label>Condição de pagamento</label>
    <nameField>
        <label>Nome da Condição de pagamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condições de pagamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>