force-app/main/default/objects/PaymentCondition__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que indica se o registro esta ativo ou não.</description>
    <inlineHelpText>Campo que indica se o registro esta ativo ou não.</inlineHelpText>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>