force-app/main/default/objects/PaymentCondition__c/fields/PaymentForm__c.field-meta.xml
<CustomField>
    <fullName>PaymentForm__c</fullName>
    <label>Formas de Pagamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>#</fullName>
                <label>Bonificação</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Antecipado - Clientes</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Barter Clientes (nível tesour)</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Boleto - Clientes</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Cartão de Crédito - Clientes</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Cartão de Débito - Clientes</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Carteira - Clientes (Dinheiro)</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Cessão - Cliente (nível tes)</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Cheque - Clientes</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Depósito - Clientes</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>PIX - Clientes</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Transfêrencia (livre)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>