force-app/main/default/objects/PaymentCondition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Active__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>